tests/Tuc/Fixtures/errors/UndefinedParticipant-in-parts.tuc
tuc parse error test
participants
    GenericService parts

GenericService
    UndefinedParticipant.Foo
